--- a/HH/guessthenumber.html
+++ b/HH/guessthenumber.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="guessthenumber.css">
      <link rel="stylesheet" href="gtn.css">
     <script src="guessthenumber.js"> </script>
+    <a href="parspeli.html" class="nav">Par spēli</a>
 </head>
 <body>
   <header>
@@ -23,6 +24,7 @@ min="1" max="100">
 <button onclick="checkGuess()">Iesniegt</button>
 <p id="message">
 </p>
+<p> Mēģinājumi: <span id="attemptCount">0</span></p>
 </div>
 </main>
 
