--- a/HH/parspeli.html
+++ b/HH/parspeli.html
@@ -6,11 +6,26 @@
      <link rel="stylesheet" href="guessthenumber.css">
      <link rel="stylesheet" href="gtn.css">
     <script src="guessthenumber.js"> </script>
+     <a href="guessthenumber.html"  class="nav2">Atpakaļ</a>
+
+     <main>
+        <div class="text">
 </head>
     <title>Par spēli</title>
 </head>
 <body>
     <h1> Par šo spēli</h1>
-    <p> Šī ir minēšanas spēle, kura izstrādāta ar HTML, JS un CSS.</p>
+    <p> Šī ir minēšanas spēle, kura izstrādāta ar HTML, JS un CSS.
+<br>
+<br>
+        NOTEIKUMI:
+        <br>
+<br>
+        1. IZVĒLIES CIPARU NO 1 LĪDZ 100.
+        <br>
+        2. TURPINI MINĒT BALSTOTIES UZ TO, KAS TEIKTS. (SKAITLIS MAZĀKS/LIELĀKS)
+        <br>
+        3. MĒĢINI UZMINĒT AR VISMAZĀK MĒĢINĀJUMIEM.
+    </p> </div> </main>
 </body>
 </html>
